horizontal tabs font fixes, overlapping toolbar button bug fix on grid

--- a/src/blocks/block-horizontal-tabs/styles/editor.scss
+++ b/src/blocks/block-horizontal-tabs/styles/editor.scss
@@ -11,9 +11,6 @@ div[data-type="c9-blocks/horizontal-tabs"] .editor-block-list__block-edit.block-
 }
 
 div[data-type="c9-blocks/horizontal-tabs"] .c9-horizontal-tabs {
-	ul li {
-		font-size: 1em;
-	}
 
 	.tab-content [data-tab] {
 		display: none;
